--- a/Tabs/blank2.html
+++ b/Tabs/blank2.html
@@ -254,6 +254,36 @@
         padding: 10px 0;
         background-color: #222;
       }
+
+       /* Toast Notification */
+    .toast {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #333;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 4px;
+      display: none;
+      z-index: 1000;
+      animation: slideIn 0.3s ease;
+    }
+
+    .toast.success {
+      background-color: #4CAF50;
+    }
+
+    @keyframes slideIn {
+      from {
+        transform: translateX(100%);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
     </style>
   </head>
 
@@ -296,7 +326,7 @@
             </h2>
             <p class="product-rating">3.4</p>
             <p class="product-price">₹999</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart(this, 999)">Add to Cart</button>
           </div>
         </div>
         <!-- Product 2 -->
@@ -310,7 +340,7 @@
             </h2>
             <p class="product-rating">3.4</p>
             <p class="product-price">₹499</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart(this, 499)>Add to Cart</button>
           </div>
         </div>
         <!-- Product 3 -->
@@ -323,7 +353,7 @@
             </h2>
             <p class="product-rating">3.9</p>
             <p class="product-price">₹583</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart(this, 583)">Add to Cart</button>
           </div>
         </div>
         <!-- Product 4 -->
@@ -337,7 +367,7 @@
             </h2>
             <p class="product-rating">4.0</p>
             <p class="product-price">₹550</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart(this, 550)">Add to Cart</button>
           </div>
         </div>
         <!-- Product 5 -->
@@ -349,7 +379,7 @@
             </h2>
             <p class="product-rating">3</p>
             <p class="product-price">₹749</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart(this, 749)">Add to Cart</button>
           </div>
         </div>
         <!-- Product 6 -->
@@ -363,7 +393,7 @@
             </h2>
             <p class="product-rating">4.5</p>
             <p class="product-price">₹1299</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart(this, 1299)">Add to Cart</button>
           </div>
         </div>
       </div>
@@ -399,5 +429,45 @@
     </footer>
 
     <script src="Tabs.js"></script>
+    <script>
+      function addToCart(button, price) {
+        // Get the product block
+        const productBlock = button.closest('.product-block');
+  
+        // Get the product title
+        const title = productBlock.querySelector('.product-title').textContent;
+  
+        // Get the product image URL
+        const imageUrl = productBlock.querySelector('.product-image').src;
+  
+        // Create a cart item object
+        const cartItem = {
+          title,
+          price,
+          image: imageUrl
+        };
+  
+        // Retrieve existing cart items from local storage
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+  
+        // Add the new item to the cart
+        cart.push(cartItem);
+  
+        // Save the updated cart back to local storage
+        localStorage.setItem('cart', JSON.stringify(cart));
+  
+        // Show a toast notification
+        const toast = document.createElement('div');
+        toast.className = 'toast success';
+        toast.textContent = `${title} added to cart!`;
+        document.body.appendChild(toast);
+        toast.style.display = 'block';
+  
+        setTimeout(() => {
+          toast.style.display = 'none';
+          document.body.removeChild(toast);
+        }, 3000);
+      }
+    </script>
   </body>
 </html>
